added route for posts and likes
