# server/routes/image.js
@@ -1,12 +1,10 @@
 const express = require('express');
-const { v4: uuidv4 } = require('uuid');
 
 const router = express.Router();
 const multer = require('multer');
-const { s3UploadV3, getObjectFromS3 } = require('../s3')
-const { PrismaClient } = require('@prisma/client')
-const prisma = new PrismaClient()
 
+const { uploadImage, getImage } = require('../controller/imageUploadController');
+const { catchErrors } = require('../handlers/errorHandler');
 
 const fileFilter = (req, file, cb) => {
     if (file.mimetype === 'image/jpeg' || file.mimetype === 'image/png') {
@@ -24,41 +22,8 @@ const imageUpload = multer({
     fileFilter,
 });
 
+router.route('/:key').get(catchErrors(getImage))
 
-router.get('/:key', async (req, res) => {
-    const { key } = req.params;
-    const result = await getObjectFromS3(key)
-    return res.status(200).json({ imageUrl: result })
-}
-)
-
-router.post('/', imageUpload.single('file'), async (req, res) => {
-    const { mimetype, size } = req.file;
-
-    const s3Result = await s3UploadV3(req.file)
-    const currentYear = new Date().getFullYear()
-
-    if (s3Result) {
-        const imageResult = await prisma.images.create({
-            data: {
-                id: uuidv4(),
-                filepath: s3Result.key,
-                mimetype: mimetype,
-                size: size,
-                filename: "file.originalname",
-                createdAt: new Date(currentYear, 6, 1).toISOString()
-
-            }
-        })
-
-        res.status(200).json({
-            "message": "Image inserted successfully", status: true, imageResult: { ...imageResult, size: imageResult.size.toString() }
-        })
-
-    } else {
-        console.error('Error inserting image:', error);
-        res.json({ success: false, message: 'upload failed', stack: error.stack });
-    }
-})
+router.route('/').post(imageUpload.single('file'), catchErrors(uploadImage))
 
 module.exports = router;
